--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -1,6 +1,12 @@
-body {
+html, body {
   background-color: #f9f7f3;
   margin: 0;
   padding: 0;
   min-height: 100vh;
+}
+
+#root {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
 }
